--- a/config/config.env
+++ b/config/config.env
@@ -3,3 +3,6 @@ PORT = 3000
 NODE_ENV = development
 
 DB_LOCAL_URI = mongodb://localhost:27017/jobs
+
+GEOCODER_PROVIDER = mapquest
+GEOCODER_API_KEY = yJfGUrlpxRaa4fssEuCHdtLun3l0TDXQ
