--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.2",
+    "node-geocoder": "^4.2.0",
+    "slugify": "^1.6.5",
     "validator": "^13.9.0"
   }
 }
