Generate JSON Web Token

--- a/config/config.env
+++ b/config/config.env
@@ -6,3 +6,6 @@ DB_LOCAL_URI = mongodb://localhost:27017/jobs
 
 GEOCODER_PROVIDER = mapquest
 GEOCODER_API_KEY = yJfGUrlpxRaa4fssEuCHdtLun3l0TDXQ
+
+JWT_SECRET = 121032DNBFW9834WDKQ0349UNDK
+JWT_EXPIRES_TIME = 1d
