Sending JWT Token in Cookie

--- a/config/config.env
+++ b/config/config.env
@@ -9,3 +9,4 @@ GEOCODER_API_KEY = yJfGUrlpxRaa4fssEuCHdtLun3l0TDXQ
 
 JWT_SECRET = 121032DNBFW9834WDKQ0349UNDK
 JWT_EXPIRES_TIME = 1d
+COOKIE_EXPIRES_TIME = 7
